--- a/index.html
+++ b/index.html
@@ -3,21 +3,37 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>Wind Report</title>
+  <title>Winddts</title>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.3/angular.min.js">
   </script>
+  <script src="js/vendor/jquery.js"></script>
+  <script src="js/foundation.min.js"></script>
   <script type="text/javascript" src="js/windfinder.js"></script>
   <link rel="stylesheet" type="text/css" href="css/custom.css">
   <link rel="stylesheet" href="css/foundation.css" />
   <script src="js/vendor/modernizr.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places"></script>
 </head>
 <body>
   <section role="main" ng-controller="WindReportCtrl">
 
     <div class="row"> 
       <div class="large-12 medium-12 small-12 columns">
-        <h1>Wind Report</h1>   
-        <h3>Santa Monica, CA</h3>
+        
+        <form>
+          <div class="row collapse">
+            <div class="large-4 columns">
+              <!-- <h1>Wind Dots</h1> -->
+              <img src="img/wind_dots_logo.png">
+            </div>
+            <div class="large-6 small-10 columns">
+              <input id="city" type="text" placeholder="City" ng-change="getWindData()"> 
+            </div>
+            <div class="large-2 small-2 columns">
+              <a href="#" class="button postfix" ng-click="getWindData()">Go</a>
+            </div>
+          </div>
+        </form>
       </div>
     </div>
     <div class="row">   
@@ -37,13 +53,6 @@
         </div>
       </div>
     </div>
-
   </section>
- 
-  <script src="js/vendor/jquery.js"></script>
-  <script src="js/foundation.min.js"></script>
-  <script>
-    $(document).foundation();
-  </script>
 </body>
 </html>
