--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
       </div>
     </div>
     <div class="row">   
-      <div class = "large-2 medium-3 small-12 columns" ng-repeat="hour in weather">
+      <div class = "small-12 large-2 medium-3 columns" ng-repeat="hour in weather">
         <div class="wind-dot-container">
           <div class="wind-dot-data">
             <div class="time">{{ hour.FCTTIME.hour }}:00</div>
-            <div>{{ hour.FCTTIME.mon }}/{{ hour.FCTTIME.mday }}/{{ hour.FCTTIME.year }}</div>
+            <div class="date">{{ hour.FCTTIME.mon }}/{{ hour.FCTTIME.mday }}/{{ hour.FCTTIME.year }}</div>
             <div class="windspeed">{{ hour.wspd.english }} mph</div>
-            <div class="direction">{{ hour.wdir.dir }}</div>
+            <div class="direction"> {{ hour.wdir.dir }}</div>
           </div>
 
           <div class="wind-dot-arrow" style="transform:rotate({{ hour.wdir.degrees + 135}}deg);
@@ -77,10 +77,10 @@
       </div>
     </div>
   </section>
-  <div class="wind-dot-container">
+  <!-- <div class="wind-dot-container">
     <div class="wind-dot-data">
       <div class="time">10:00</div>
-      <div>date</div>
+      <div class="date">date</div>
       <div class="windspeed">10 mph</div>
       <div class="direction">WSW</div>
     </div>
@@ -89,6 +89,6 @@
       <div class="wind-dot-circle"></div>
       <div class="wind-dot-point"></div>
     </div> 
-  </div>
+  </div> -->
 </body>
 </html>
